# code_assistant_mcp

./: .envrc  .gitignore  Dockerfile  README.md  build_rag_data.sh  db_tools.py  docker-compose.yml  gemini.md  library_doc_tool.py  mix_dependency_scraper.py  pyproject.toml  rag_builder.py
app/: cli.py  database.py  db_manager.py  server.py
code_assistant_mcp/: .envrc  README.md  db_tools.py  hello.py  pyproject.toml  rag_builder.py
