[project]
name = "code-assistant-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
py_modules = ["db_tools", "hello", "rag_builder", "library_doc_tool"]
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.12.1",
    "fastapi==0.111.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "starlette",
    "pydantic",
    "pydantic-core",
    "typing-extensions",
    "typing-inspection",
    "chromadb-client>=0.5.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.2.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "langchain-community>=0.2.0",
    "pypdf>=4.2.0",
]
