[project]
name = "code-assistant-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.12.1",
    "fastapi==0.111.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "starlette",
    "pydantic",
    "pydantic-core",
    "typing-extensions",
    "typing-inspection",
]
